--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = "0.5.15"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
+sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "any", "postgres"] }
 tokio = { version = "1.20.1", features = ["full"] }
 tracing = "0.1.36"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
